--- a/src/app/dashboard/components/carreras/create-carreras/create-carreras.component.html
+++ b/src/app/dashboard/components/carreras/create-carreras/create-carreras.component.html
@@ -20,7 +20,7 @@
                 </label>
             </div>
             <div class="progress">
-                <mat-hint>Puede añadir una imagen de portada para el curso, debe estar en formato JPG o PNG.</mat-hint>
+                <mat-hint>Puede añadir una imagen de portada para la carrera, debe estar en formato JPG o PNG.</mat-hint>
             </div>
             <picture>
                 <img *ngIf="showImage.src" [src]="showImage.src" alt="portada de la carrera">
