--- a/src/app/dashboard/components/carreras/add-estudiantes/add-estudiantes.component.html
+++ b/src/app/dashboard/components/carreras/add-estudiantes/add-estudiantes.component.html
@@ -1,11 +1,24 @@
 <div class="container">
     <h2>Matricular estudiantes</h2>
-    <mat-form-field appearance="legacy" class="search">
-        <mat-label>Buscar</mat-label>
-        <input matInput placeholder="Placeholder" (keyup)="applyFilter($event.target.value)" ><!---->
-        <mat-icon matSuffix>search</mat-icon>
-        <mat-hint>puede buscar por cualquier campo</mat-hint>
-    </mat-form-field>
+
+    <div class="menuVariado">
+        <div class="busquedaEstudiante">
+            <mat-form-field appearance="legacy" class="search">
+                <mat-label>Buscar</mat-label>
+                <input matInput placeholder="Placeholder" (keyup)="applyFilter($event.target.value)" ><!---->
+                <mat-icon matSuffix>search</mat-icon>
+                <mat-hint>puede buscar por cualquier campo</mat-hint>
+            </mat-form-field>
+        </div>
+        <div class="botonMatricular">
+            <button (click)="openDialog()">
+                <div class="botonMatricular-item">
+                    <mat-icon>group_add</mat-icon>
+                    <div class="botonMatricular-texto">Agregar estudiante</div>
+                </div>
+            </button>
+        </div>
+    </div>
 
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
@@ -17,28 +30,25 @@
             *matCellDef="let element"
             matTooltip="Usuario"
             class="name">
-                {{ element.nombres }} {{ element.apellidos }}
+                {{ element.nombre }}
             </td>
         </ng-container>
 
         <!-- botones de acción -->
         <ng-container matColumnDef="matricula">
-            <th mat-header-cell *matHeaderCellDef id="acciones">Matricula</th>
+            <th mat-header-cell *matHeaderCellDef id="acciones">Desmatricular</th>
             <td mat-cell *matCellDef="let element" class="buttons">
                 <button
-                *ngIf="element.matriculado"
-                mat-stroked-button
-                class="matriculado"
-                matTooltip="Matriculado"
-                (click)="desmatricularUsuario(element.id)"
-                > Matriculado</button>
-                <button
-                *ngIf="!element.matriculado"
-                mat-stroked-button
-                matTooltip="Desmatriculado"
-                class="desmatriculado"
-                (click)="matricularUsuario(element)"
-                > Desmatriculado</button>
+                mat-mini-fab
+                class="desmatricular"
+                matTooltip="Desmatricular estudiante."
+                color="warn"
+                (click)="validarDesmatricula(element)"
+                >
+                <mat-icon>
+                    <span class="material-icons">person_off</span>
+                </mat-icon>
+                </button>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
