--- a/src/app/dashboard/components/carreras/add-curso/add-curso.component.html
+++ b/src/app/dashboard/components/carreras/add-curso/add-curso.component.html
@@ -45,7 +45,7 @@
                 mat-mini-fab
                 color="warn"
                 matTooltip="Quitar curso"
-                (click)="validarQuitarCurso(element.id)"
+                (click)="validarQuitarCurso(element.id, element.nombre)"
                 >
                     <mat-icon>
                         <span class="material-icons">clear</span>
