--- a/src/app/dashboard/components/carreras/carreras-detail/carreras-detail.component.html
+++ b/src/app/dashboard/components/carreras/carreras-detail/carreras-detail.component.html
@@ -125,7 +125,22 @@
                 </mat-expansion-panel>
 
             </mat-accordion>
-            <button class="btn-back" routerLink="/dashboard/carreras">{{ '<< Volver a Lista de carreras' }}</button>
+            <button 
+            *ngIf="!idUser && !home"
+            class="btn-back" routerLink="/dashboard/carreras">{{ '<< Volver a Lista de carreras' }}</button>
+            <div class="buttons" *ngIf="idUser || home">
+                <button
+                    mat-raised-button
+                    style="background: var(--main-color2); color: white; margin-right: 24px;"
+                    (click)="goToBuy()">
+                        {{ !home ? 'Incribirse' : 'Comprar'}}
+                </button>
+                <button
+                    mat-raised-button
+                    (click)="goBack()">
+                        Regresar
+                </button>
+            </div>
         </div>
     </section>
 </main>
