--- a/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
+++ b/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
@@ -5,11 +5,15 @@
             <div class="course-image">
                 <img src="{{ item.image }}" alt="" loading="lazy" />
                 <div class="course-info">
-                    <span class="material-icons">info</span>
+                    <span
+                    (click)="openDialog(item)"
+                    class="material-icons">info</span>
                 </div>
             </div>
             <div class="course-detail">
-                <h3><a>{{ item.nombre }}</a></h3>
+                <h3
+                [routerLink]="'/carreras/detail/'+item.id+'/'+this.userId"
+                ><a>{{ item.nombre }}</a></h3>
                 <div class="ranking">
                     <star-rating [starType]="'svg'" [rating]="3.8" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
                     <p>80 votos | 25 visitas</p>
