--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -15,7 +15,7 @@
     <mat-accordion>
       <!-- // opciones admin -->
       <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-        <mat-expansion-panel-header *ngIf="logguedUser.perfil==='administrador'" class="admin-header">
+        <mat-expansion-panel-header *ngIf="logguedUser.perfil==='administrador' || logguedUser.perfil==='profesor'" class="admin-header">
           <mat-panel-title class="admin">
             <mat-list>
               <mat-list-item>
