--- a/src/app/dashboard/components/users/users.component.html
+++ b/src/app/dashboard/components/users/users.component.html
@@ -31,7 +31,7 @@
               color="primary"
               [checked]="element.admin"
               (click)="check(ev)">
-                <mat-icon matSuffix (click)="becomeAdmin(element.id, element.admin)">assignment_ind</mat-icon>
+                <mat-icon matSuffix>assignment_ind</mat-icon>
                 <span>admin?</span>
             </mat-checkbox>
             <button mat-stroked-button color="primary" (click)="openDialog(element)">
