--- a/src/app/course-view/components/navigation/navigation.component.scss
+++ b/src/app/course-view/components/navigation/navigation.component.scss
@@ -18,6 +18,12 @@
   border: 2px solid rgba(0, 114, 121, 0.95);
 }
 
+.teacher-name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .sidenav {
   width: 300px;
 }
