--- a/src/app/dashboard/components/lessons/lesson-config/lesson-config.component.html
+++ b/src/app/dashboard/components/lessons/lesson-config/lesson-config.component.html
@@ -44,11 +44,11 @@
                     [init]="{
                         icons: 'material',
                         skin: 'borderless',
-                        plugins: ['wordcount', 'lists', 'image imagetools', 'media'],
+                        plugins: ['wordcount', 'lists', 'link', 'image imagetools', 'media'],
                         menubar: false,
                         min_height: 350,
                         width : '750',
-                        toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media',
+                        toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | link | image | media',
                         media_live_embeds: true
                     }">
                 </editor>
