--- a/src/app/course-view/components/contenido/contenido.component.html
+++ b/src/app/course-view/components/contenido/contenido.component.html
@@ -1,3 +1,5 @@
-<div class="contenido">
-    <div id="innerHtml"></div>
-</div>
+<main>
+    <div class="contenido">
+        <div id="innerHtml"></div>
+    </div>
+</main>
