--- a/src/app/course-view/components/contenido/contenido.component.scss
+++ b/src/app/course-view/components/contenido/contenido.component.scss
@@ -1,4 +1,21 @@
-.contenido
-{
-    margin-top: 1.5rem;
+* {
+    box-sizing: border-box;
+}
+
+main {
+    background: #eceff1;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    border-radius: 4px;
+    margin: 36px auto;
+    width: 96%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .contenido {
+        padding: 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
