--- a/src/app/dashboard/components/cursos/ads-curso/ads-curso.component.html
+++ b/src/app/dashboard/components/cursos/ads-curso/ads-curso.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>Gestión de Anuncios del Curso</h2>
+    <h2>{{admin ? 'Gestión de ' : ''}}Anuncios del Curso</h2>
     <mat-form-field appearance="legacy" class="search">
         <mat-label>Buscar</mat-label>
         <input matInput (input)="applyFilter($event.target.value)" placeholder="Buscar anuncio"> <!--(input)="applyFilter($event.target.value)"-->
@@ -43,7 +43,7 @@
                     (click)="openModalVista(element)"
                     mat-stroked-button
                     color="primary"
-                    matTooltip="Editar anuncio"
+                    matTooltip="ver anuncio"
                     >
                     <mat-icon style="color: rgba(0, 114, 121, 0.95);">visibility</mat-icon>
                     </button>
