--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -120,7 +120,7 @@
             <mat-divider></mat-divider>
           </mat-list-item>
           <mat-list-item class="secondary-list">
-            <a mat-list-item routerLink="#">Mis carreras</a>
+            <a mat-list-item (click)="goToMyCareers()">Mis carreras</a>
             <mat-divider></mat-divider>
           </mat-list-item>
           <mat-list-item class="secondary-list">
