--- a/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
+++ b/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
@@ -15,8 +15,14 @@
                 [routerLink]="'/carreras/detail/'+item.id+'/'+this.userId"
                 ><a>{{ item.nombre }}</a></h3>
                 <div class="ranking">
-                    <star-rating [starType]="'svg'" [rating]="3.8" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
-                    <p>80 votos | 25 visitas</p>
+                    <star-rating 
+                    (starClickChange)="agregarEstrella($event.rating, item)"
+                    [starType]="'svg'"
+                    [speed]="'slow'"
+                    [disabled]="item.haVotado"
+                    [rating]="item.promedio"
+                    [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>{{item.promedio}} {{item.promedio<2 ? 'estrella':'estrellas'}} | {{item.nroVotos}} votos</p>
                 </div>
             </div>
         </div>
