--- a/src/app/dashboard/components/cursos/ads-curso/ads-curso.component.html
+++ b/src/app/dashboard/components/cursos/ads-curso/ads-curso.component.html
@@ -34,6 +34,23 @@
             </td>
         </ng-container>
 
+        <ng-container matColumnDef="fecha">
+            <th
+                mat-header-cell
+                *matHeaderCellDef
+                mat-sort-header
+                id="fecha">
+                    Fecha publicación
+            </th>
+            <td
+                mat-cell
+                *matCellDef="let element"
+                matTooltip="Fecha"
+                class="fecha">
+                {{ element.fecha }}
+            </td>
+        </ng-container>
+
         <!-- botones de acción -->
         <ng-container matColumnDef="actions">
 
