Links en anuncios-cursos

--- a/src/app/dashboard/components/course-registration/lessons/lessons.component.html
+++ b/src/app/dashboard/components/course-registration/lessons/lessons.component.html
@@ -10,14 +10,14 @@
                 <mat-hint>Puede buscar por cualquier campo</mat-hint>
             </mat-form-field>
         </div>
-        <div *ngIf="generarCertificado()">
+        <!-- <div *ngIf="finished">
             <button
             mat-raised-button
             style="background: var(--main-color2); color: white;"
             (click)="downloadPDFCerticate()">
             <mat-icon>school</mat-icon>
             Generar certificado</button>
-        </div>
+        </div> -->
     </div>
 
 
