--- a/src/app/dashboard/components/cursos/add-student/matricular/matricular.component.html
+++ b/src/app/dashboard/components/cursos/add-student/matricular/matricular.component.html
@@ -69,7 +69,18 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="estado">
+        <ng-container matColumnDef="fecha">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header id="fecha">Fecha registro</th>
+            <td
+                mat-cell
+                *matCellDef="let element"
+                matTooltip="Fecha de registro en la plataforma."
+                class="fecha">
+                {{ element.fechaCreacion }}
+            </td>
+        </ng-container>
+
+        <!-- <ng-container matColumnDef="estado">
             <th mat-header-cell *matHeaderCellDef id="estado">Estado</th>
             <td
                 mat-cell
@@ -78,7 +89,7 @@
                 class="estado">
                 {{ element.estado }}
             </td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- botones de acción -->
         <ng-container matColumnDef="actions">
@@ -121,7 +132,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
     <mat-paginator
-        [pageSizeOptions]="[10, 15, 20]"
+        [pageSizeOptions]="[10, 15, 20, 50, 100, 150]"
         showFirstLastButtons>
     </mat-paginator>
 
