Fix evaluation bug

--- a/src/app/dashboard/components/cursos/course-home/course-home.component.html
+++ b/src/app/dashboard/components/cursos/course-home/course-home.component.html
@@ -27,7 +27,7 @@
                             <mat-checkbox class="example-margin" [(ngModel)]="lessonsOpt" color="primary">Lecciones</mat-checkbox>
                             <mat-checkbox class="example-margin" [(ngModel)]="exercisesOpt" color="primary">Ejercicios</mat-checkbox>
                             <!-- <mat-checkbox class="example-margin" [(ngModel)]="forumOpt" color="primary">Foros</mat-checkbox> -->
-                            <mat-checkbox class="example-margin" [(ngModel)]="evaluationsOpt" color="primary">Evaluaciones</mat-checkbox>
+                            <mat-checkbox class="example-margin" [(ngModel)]="evaluationsOpt" color="primary">Indicadores</mat-checkbox>
                             <mat-checkbox class="example-margin" [(ngModel)]="adsOpt" color="primary">Anuncios</mat-checkbox>
                             <mat-checkbox class="example-margin" [(ngModel)]="libraryOpt" color="primary">Biblioteca Virtual</mat-checkbox>
                             <mat-checkbox class="example-margin" [(ngModel)]="glossaryOpt" color="primary">Glosario</mat-checkbox>
@@ -85,7 +85,7 @@
             <div class="img"><img src="/assets/icons/evaluaciones.svg" alt=""></div>
 
             <div class="options">
-                <a (click)="goToEvaluations()">Evaluaciones</a>
+                <a (click)="goToEvaluations()">Indicadores</a>
             </div>
         </div>
 
