--- a/src/app/dashboard/components/evaluations/evaluations-home/evaluations-home/evaluations-home.component.html
+++ b/src/app/dashboard/components/evaluations/evaluations-home/evaluations-home/evaluations-home.component.html
@@ -22,7 +22,7 @@
     </table>
     </div>
 
-    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 15, 20, 50, 100, 200, 500]" showFirstLastButtons></mat-paginator>
     <button mat-stroked-button color="primary" (click)="goBack()" style="background: var(--main-color2); color: white;">
         << Regresar </button>
 </div>
