--- a/src/app/dashboard/components/users/user-profile/user-profile.component.html
+++ b/src/app/dashboard/components/users/user-profile/user-profile.component.html
@@ -49,7 +49,7 @@
             </mat-form-field>
             <!-- numero id -->
             <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Número de documento</mat-label>
+                <mat-label>Número de documento (sin puntos ni comas)</mat-label>
                 <input
                     type="text"
                     matInput
