--- a/src/app/home/components/nav/nav.component.html
+++ b/src/app/home/components/nav/nav.component.html
@@ -9,6 +9,7 @@
             <li routerLink="/home/cursos" (click)="classToogle()"><a>Cursos</a></li>
             <li (click)="classToogle()"><a target="_blank" href="https://chym-ndt.com/">Conoce a CH&M NDT</a></li>
             <li routerLink="/home/contactanos" (click)="classToogle()"><a>Contáctanos</a></li>
+            <li routerLink="/home/validar-certificado" (click)="classToogle()"><a>Validar certificado</a></li>
         </ul>
     </div>
     <div class="auth-options">
