Add creacion de certificados

--- a/src/app/dashboard/components/certificates/adm-list-certificates/adm-list-certificates.component.html
+++ b/src/app/dashboard/components/certificates/adm-list-certificates/adm-list-certificates.component.html
@@ -104,9 +104,9 @@
             (click)="goToEdit(element)">
             <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
             </button>
-            <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
+            <!-- <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
             <mat-icon>delete</mat-icon>
-            </button>
+            </button> -->
         </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
