--- a/src/app/home/components/footer/footer.component.html
+++ b/src/app/home/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
-    <p>&copy; 2021 CH & M e-learning</p>
-    <p>diseñado por: <a target="_blank" href="https://www.linkedin.com/in/luhesaga/">Luis Sarmiento</a></p>
+    <p class="chym">&copy; 2021 CH&M e-learning</p>
+    <p class="made-by">designed & coded by: <a target="_blank" href="https://www.linkedin.com/in/luhesaga/">Luis Sarmiento</a></p>
 </footer>
